@@ -2,6 +2,21 @@
 ; Internet
 ; #############################
 
+[Azureus]
+
+category      = Internet
+describe      = Bittorrent Client
+website       = http://azureus.sourceforge.net/
+scrape        = http://prdownloads.sourceforge.net/azureus/
+version       = Azureus_([0-9]\.[0-9]\.[0-9]\.[0-9])_Win32.setup.exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/azureus/
+filename      = Azureus_#VERSION#_Win32.setup.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = Azureus
+uninstparam   = /S _?=#INSTALL_DIR#
+
 [FileZilla]
 
 category      = Internet
@@ -47,6 +62,21 @@ chinstdir     = /D=#INSTALL_DIR#
 uninstall     = Gaim
 uninstparam   = /S _?=#INSTALL_DIR#
 
+[Miranda IM]
+
+category      = Internet
+describe      = Multi-protocol IM Client
+website       = http://www.miranda-im.org/
+scrape        = http://prdownloads.sourceforge.net/miranda/
+version       = miranda-im-v([0-9]\.[0-9][.0-9]*)-unicode.exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/miranda/
+filename      = miranda-im-v#VERSION#-unicode.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = Miranda IM
+uninstparam   = /S _?=#INSTALL_DIR#
+
 [Putty]
 
 category      = Internet
@@ -80,6 +110,36 @@ uninstparam   = -ms
 ; #############################
 ; Entertainment
 ; #############################
+
+[CDex]
+
+category      = Entertainment
+describe      = CD Ripper
+website       = http://cdexos.sourceforge.net/index.html
+scrape        = http://prdownloads.sourceforge.net/cdexos/
+version       = cdex_([0-9]+).exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/cdexos/
+filename      = cdex_#VERSION#.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = CDex
+uninstparam   = /S
+
+[Songbird]
+
+category      = Entertainment
+describe      = Media Player
+website       = http://www.songbirdnest.com/
+scrape        = http://download.songbirdnest.com/installer/win32/
+version       = Songbird_([0-9]_[0-9])_i686.exe
+download      = http://download.songbirdnest.com/installer/win32/
+filename      = Songbird_#VERSION#_i686.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = Songbird
+uninstparam   = /S _?=#INSTALL_DIR#
 
 [VideoLAN]
 
@@ -115,6 +175,36 @@ chinstdir     =
 uninstall     =
 uninstparam   =
 
+[Audacity]
+
+category      = Productivity
+describe      = Sound Editor
+website       = http://audacity.sourceforge.net/
+scrape        = http://prdownloads.sourceforge.net/audacity/
+version       = audacity-win-([0-9]\.[0-9]\.[0-9]).exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/audacity/
+filename      = audacity-win-#VERSION#.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Audacity #MAJORMINOR_VERSION# Beta_is1
+uninstparam   = /sp- /silent /norestart
+
+[BurnAtOnce]
+
+category      = Productivity
+describe      = CD Burning
+website       = http://www.burnatonce.net/
+scrape        = http://www.burnatonce.net/downloads/
+version       = burnatonce ([0-9]\.[0-9]+\.[0-9])
+download      = http://www.burnatonce.net/files/
+filename      = bao#DOTLESS_VERSION#.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = burnatonce_is1
+uninstparam   = /sp- /silent /norestart
+
 [FreeMind]
 
 category      = Productivity
@@ -145,6 +235,36 @@ chinstdir     = /D=#INSTALL_DIR#
 uninstall     = Notepad++
 uninstparam   = /S _?=#INSTALL_DIR#
 
+[Nvu]
+
+category      = Productivity
+describe      = Web Authoring System
+website       = http://nvu.com/
+scrape        = http://nvu.com/download.php
+version       = nvu-([0-9]\.[0-9])-win32-installer-full.exe
+download      = http://cvs.nvu.com/download/
+filename      = nvu-#VERSION#-win32-installer-full.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Nvu_is1
+uninstparam   = /sp- /silent /norestart
+
+[Vim]
+
+category      = Productivity
+describe      = Advanced Text Editor
+website       = http://www.vim.org/
+scrape        = http://prdownloads.sourceforge.net/cream/
+version       = gvim-([0-9]-[0-9]-[0-9]+).exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/cream/
+filename      = gvim-#VERSION#.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = Vim #DASHTODOT_VERSION#
+uninstparam   = /S _?=#INSTALL_DIR#
+
 ; #############################
 ; Utilities
 ; #############################
@@ -152,10 +272,10 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; [AppSnap]
 
 ; category      = Utilities
-; describe      = Application Installer/Uninstaller
-; website       = http://www.genotrance.com
+; describe      = Application Installer
+; website       = http://blog.genotrance.com/applications/appsnap/
 ; scrape        = http://genotrance.com/code/appsnap/
-; version       = appsnapsetup-([0-9]\.[0-9].exe
+; version       = appsnapsetup-([0-9]\.[0-9]+).exe
 ; download      = http://genotrance.com/code/appsnap/
 ; filename      = appsnapsetup-#VERSION#.exe
 ; instparam     = /S
@@ -163,6 +283,21 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; chinstdir     = /D=#INSTALL_DIR#
 ; uninstall     = AppSnap
 ; uninstparam   = /S _?=#INSTALL_DIR#
+
+[AutoHotKey]
+
+category      = Utilities
+describe      = GUI Automation
+website       = http://www.autohotkey.net/
+scrape        = http://www.autohotkey.net/downloads.html
+version       = Version ([0-9]\.[0-9]\.[0-9]+\.[0-9]+)
+download      = http://www.autohotkey.net/programs/
+filename      = AutoHotkey#DOTLESS_VERSION#_Install.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = AutoHotKey
+uninstparam   = /S _?=#INSTALL_DIR#
 
 [CCleaner]
 
