@@ -1,8 +1,14 @@
 1.01
 ----
 Enhancements
-- Added CCleaner, ClamWin, Gaim, Thunderbird and VideoLAN.
+- Added new applications:
+  - Internet : Azureus, Gaim, Miranda, Thunderbird
+  - Entertainment : CDex, Songbird, VideoLAN
+  - Productivity: Audacity, BurnAtOnce, Nvu, Vim
+  - Utilities : AutoHotKey, CCleaner, ClamWin
 - Simplified process.get_width().
+- Increased default height of GUI.
+- Added DASHTODOT_VERSION to convert 1-1-1 versions to 1.1.1.
 
 Bug Fixes
 - Fixed bug where file version filtering algorithm was failing if the latest version
@@ -12,5 +18,7 @@ Bug Fixes
   has been changed to codes >= 300.
 - Fixed bug in uninstall code where spurious \ was being introduced into the uninstall
   command string causing uninstalls to fail.
-- Added a Yield() during installs to update the progress bar after a download
-- Updated scrape URL for Firefox
+- Added a Yield() during installs to update the progress bar after a download.
+- Fixed GUI resize code to fit list and outline in window.
+- Needed to set referer to scrape URL when downloading applications.
+- Updated scrape URL for Firefox.
